feat(SR-6): implement endpoint to fetch service request by id
