# cm.klg.service-request/src/main/java/cm/klg/service_request/adapter/persistence/outbound/jpa/ServiceRequestJpaImpl.java
@@ -4,6 +4,8 @@ import cm.klg.service_request.application.outbound.ServiceRequestRepository;
 import cm.klg.service_request.application.views.ServiceRequestViews;
 import cm.klg.service_request.domain.service_provider.ServiceProviderId;
 import cm.klg.service_request.domain.service_request.ServiceRequest;
+import cm.klg.service_request.domain.service_request.ServiceRequestId;
+import cm.klg.service_request.domain.service_request.ServiceRequestNotFoundException;
 import cm.klg.service_request.domain.service_request.ServiceRequestStatus;
 import cm.klg.service_request.domain.user.UserId;
 import cm.klg.service_request.utils.PageData;
@@ -64,5 +66,12 @@ public class ServiceRequestJpaImpl implements ServiceRequestRepository {
         springRepository.findAllRequestByProviderIdAndStatusAsView1(
             providerId.value(), status.name(), pageable);
     return new PageData<>(serviceRequestPage.getTotalElements(), serviceRequestPage.getContent());
+  }
+
+  @Override
+  public ServiceRequestViews.ServiceRequestView1 loadByIdAsView1(@NonNull ServiceRequestId id) {
+    return springRepository
+        .findByIdAsView1(id.value())
+        .orElseThrow(ServiceRequestNotFoundException::new);
   }
 }
