# cm.klg.service-request/src/main/java/cm/klg/service_request/config/ServiceRequestBeans.java
@@ -11,6 +11,7 @@ import cm.klg.service_request.application.usecase.CreateNewServiceRequestUseCase
 import cm.klg.service_request.application.usecase.CreateNewUserUseCase;
 import cm.klg.service_request.application.usecase.GetAllMyServiceRequestsUseCase;
 import cm.klg.service_request.application.usecase.GetAllServiceRequestsByProviderUseCase;
+import cm.klg.service_request.application.usecase.GetServiceRequestByIdUseCase;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
@@ -53,10 +54,14 @@ public class ServiceRequestBeans implements TransactionBeansProvider {
   }
 
   @Bean
+  public GetServiceRequestByIdUseCase getServiceRequestByIdUseCase(
+      ServiceRequestRepository serviceRequestRepository) {
+    return new GetServiceRequestByIdUseCase(serviceRequestRepository);
+  }
+
+  @Bean
   public ApproveServiceProviderUseCase approveServiceProviderUseCase(
-      UserRepository userRepository,
-      cm.klg.service_request.application.outbound.ServiceProviderRepository
-          serviceProviderRepository) {
+      UserRepository userRepository, ServiceProviderRepository serviceProviderRepository) {
     return new ApproveServiceProviderUseCase(userRepository, serviceProviderRepository);
   }
 }
